Added Apple Music

--- a/contact.html
+++ b/contact.html
@@ -26,27 +26,39 @@
         <nav>
             <div class="langWrapper">
                 <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><img draggable="false" class="emoji" alt="" src="src/images/emojis/globe.svg"> Language</button>
+                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><img draggable="false"
+                            class="emoji" alt="" src="src/images/emojis/globe.svg"> Language</button>
                     <div id="langDrop" class="dropdownContent">
-                        <a href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/usa.svg">/<img draggable="false" class="emoji" alt="" src="src/images/emojis/uk.svg"> English</a>
-                        <a href="sv/contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/sweden.svg"> Svenska (Swedish)</a>
+                        <a href="contact.html"><img draggable="false" class="emoji" alt=""
+                                src="src/images/emojis/usa.svg">/<img draggable="false" class="emoji" alt=""
+                                src="src/images/emojis/uk.svg"> English</a>
+                        <a href="sv/contact.html"><img draggable="false" class="emoji" alt=""
+                                src="src/images/emojis/sweden.svg"> Svenska (Swedish)</a>
                     </div>
                 </div>
             </div>
             <div class="navWrapper">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/tools.svg"> Projects</a>
-                <a class="navButton activeChoice" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
+                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/house.svg"> Home</a>
+                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/brain.svg"> Experiences</a>
+                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton activeChoice" href="contact.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/speak.svg"> Contact</a>
             </div>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton" >＝ Menu</button>
+                <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/tools.svg"> Projects</a>
-                <a class="navButton activeChoice" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
+                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/house.svg"> Home</a>
+                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/brain.svg"> Experiences</a>
+                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton activeChoice" href="contact.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/speak.svg"> Contact</a>
             </div>
         </nav>
     </header>
@@ -60,7 +72,8 @@
                             <div class="titleEmailWrapper">
                                 <p class="titleEmail">Email</p>
                             </div>
-                            <p class="emailText">If you have an email client installed on your device, you can click on the "Send an email" button.<br> If you don't, simply send an email to this address:</p>
+                            <p class="emailText">If you have an email client installed on your device, you can click on
+                                the "Send an email" button.<br> If you don't, simply send an email to this address:</p>
                             <p class="emailModalText">adnan@aridan.net</p>
                             <div class="buttonsEmail">
                                 <a class="socialMedia email" href="mailto:adnan@aridan.net">Send an email</a>
@@ -69,35 +82,46 @@
                         </div>
                     </div>
                     <div>
-                        <p class="subTitle">Would you like to talk to me in a one-on-one? Go ahead and send me an email or an iMessage!<br>I'll be more than happy to reply and I'm looking forward to speaking with you!</p>
+                        <p class="subTitle">Would you like to talk to me in a one-on-one? Go ahead and send me an email
+                            or an iMessage!<br>I'll be more than happy to reply and I'm looking forward to speaking with
+                            you!</p>
                         <div class="contactMe">
                             <div class="socialMedias">
-                            <div>
-                                <button onclick="emailToggle()" class="socialMedia email" >Show email address</button>
-                            </div>
-                            <div>
-                                <a class="socialMedia imessage" href="sms:adnan@aridan.net">Send an iMessage</a>
-                            </div>
+                                <div>
+                                    <button onclick="emailToggle()" class="socialMedia email">Show email
+                                        address</button>
+                                </div>
+                                <div>
+                                    <a class="socialMedia imessage" href="sms:adnan@aridan.net">Send an iMessage</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <br>
                     <div>
-                        <p class="subTitle">Looking to communicate in a more casual manner? I'm on a bunch of social media platforms too! <br>Any account on any platform that isn't linked here is not me.</p>
+                        <p class="subTitle">Looking to communicate in a more casual manner? I'm on a bunch of social
+                            media platforms too! <br>Any account on any platform that isn't linked here is not me.</p>
                         <div class="socialMedias">
                             <div>
-                                <a class="socialMedia instagram" href="https://www.instagram.com/actuallyaridan/">Instagram</a>
+                                <a class="socialMedia instagram"
+                                    href="https://www.instagram.com/actuallyaridan/">Instagram</a>
                             </div>
                             <div>
-                                <a class="socialMedia twitter" href="https://x.com/actuallyaridan">X (formerly Twitter)</a>
+                                <a class="socialMedia aMusic" href="https://music.apple.com/profile/actuallyaridan">Apple Music</a>
                             </div>
                             <div>
-                                <a class="socialMedia threads" href="https://www.threads.net/@actuallyaridan">Threads (an Instagram app)</a>
+                                <a class="socialMedia twitter" href="https://x.com/actuallyaridan">X (formerly
+                                    Twitter)</a>
+                            </div>
+                            <div>
+                                <a class="socialMedia threads" href="https://www.threads.net/@actuallyaridan">Threads
+                                    (an
+                                    Instagram app)</a>
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
-        </div>
     </main>
     <footer>
         <div class="footer">
