--- a/experiences.html
+++ b/experiences.html
@@ -116,7 +116,7 @@
     </main>
     <footer>
         <div class="footer">
-            <p>Copyright 2024 Adnan Bukvic unless stated otherwise.<br>This project uses the MIT license.</p>
+            <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
             <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
         </div>
     </footer>
