--- a/experiences.html
+++ b/experiences.html
@@ -74,7 +74,10 @@
                             Therefore, I know a lot about IT for my age, and I know that I can impress with my
                             knowledge.</p>
                         <div class="centerer">
-                            <a href="cv.html" class="cvButton">Request CV/resume</a>
+                            <div class="centererItems">
+                                <a href="cv.html" class="cvButton">Request CV/resume</a>
+                                <a class="socialMedia linkedin" href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/">LinkedIn</a>
+                            </div>
                         </div>
                         <div>
                             <div class="work">
