testing landing page

--- a/index.html
+++ b/index.html
@@ -26,27 +26,39 @@
         <nav>
             <div class="langWrapper">
                 <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><img draggable="false" class="emoji" alt="" src="src/images/emojis/globe.svg"> Language</button>
+                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><img draggable="false"
+                            class="emoji" alt="" src="src/images/emojis/globe.svg"> Language</button>
                     <div id="langDrop" class="dropdownContent">
-                        <a href="index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/usa.svg">/<img draggable="false" class="emoji" alt="" src="src/images/emojis/uk.svg"> English</a>
-                        <a href="sv/index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/sweden.svg"> Svenska (Swedish)</a>
+                        <a href="index.html"><img draggable="false" class="emoji" alt=""
+                                src="src/images/emojis/usa.svg">/<img draggable="false" class="emoji" alt=""
+                                src="src/images/emojis/uk.svg"> English</a>
+                        <a href="sv/index.html"><img draggable="false" class="emoji" alt=""
+                                src="src/images/emojis/sweden.svg"> Svenska (Swedish)</a>
                     </div>
                 </div>
             </div>
             <div class="navWrapper">
-                <a class="navButton activeChoice" href="index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/tools.svg"> Projects</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
+                <a class="navButton activeChoice" href="index.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/house.svg"> Home</a>
+                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/brain.svg"> Experiences</a>
+                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/speak.svg"> Contact</a>
             </div>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton" >＝ Menu</button>
+                <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton activeChoice" href="index.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/house.svg"> Home</a>
-                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/brain.svg"> Experiences</a>
-                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/tools.svg"> Projects</a>
-                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt="" src="src/images/emojis/speak.svg"> Contact</a>
+                <a class="navButton activeChoice" href="index.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/house.svg"> Home</a>
+                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/brain.svg"> Experiences</a>
+                <a class="navButton" href="projects.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/tools.svg"> Projects</a>
+                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                        src="src/images/emojis/speak.svg"> Contact</a>
             </div>
         </nav>
     </header>
@@ -55,10 +67,41 @@
             <div class="constructionBox">
                 <div>
                     <h1>Home</h1>
-                    <p class="subTitle">Hi there! You've reached the coolest website on the internet (well maybe not, but I think it's pretty nice)!</p>
-                    <p class="subTitle">This website is a collection of @actuallyaridan's social media accounts, experiences, projects, you name it! If it's a question about him, it's here! <br>And hey, if you need a website as base for yours, feel free to use this one! This website is fully open source. You can visit its GitHub page if you go to the "Projects" page.</p>
+                    <p class="subTitle">Hi there! You've reached the coolest website on the internet (well maybe not,
+                        but I think it's pretty nice)!</p>
+                    <p class="subTitle">This website displays my contract information, my experiences, my projects, you
+                        name it! If it's a question about me, it's here!.</p>
+                    <div class="aboutMe">
+                        <p>About me</p>
+                        <div class="informationContainer">
+                            <span class="title">
+                                <p>Personal information</p>
+                            </span>
+                            <div class="aboutMeContainer">
+                                <div class="information">
+                                    <p>Name: Adnan Bukvic</p>
+                                    <p>Also Known As: actuallyaridan</p>
+                                    <p>Age: 19 years old (born November 26th, 2004)</p>
+                                    <p>Location: Sweden</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="interestsContainer">
+                            <span class="title">
+                                <p>Interests</p>
+                            </span>
+                            <div class="aboutMeContainer">
+                                <div class="interests">
+                                    <p>Computers</p>
+                                    <p>Web Development</p>
+                                    <p>Networking</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </div>
         </div>
     </main>
     <footer>
