--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <div class="information">
                                     <p>Name: Adnan Bukvic</p>
                                     <p>Also Known As: actuallyaridan</p>
-                                    <p>Age: 19 years old (born November 26th, 2004)</p>
+                                    <p>Age: 19 years old</p>
                                     <p>Location: Sweden</p>
                                 </div>
                             </div>
@@ -95,6 +95,7 @@
                                     <p>Computers</p>
                                     <p>Web Development</p>
                                     <p>Networking</p>
+                                    <p>Music</p>
                                 </div>
                             </div>
                         </div>
