--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
                                     <p>Name: Adnan Bukvic</p>
                                     <p>Also Known As: actuallyaridan</p>
                                     <p>Age: 19 years old</p>
+                                    <p>Languages (fluent): English, Swedish</p>
+                                    <p>Languages (conversational): Bosnian, Croatian and Serbian</p>
                                     <p>Location: Sweden</p>
                                 </div>
                             </div>
