--- a/experiences.html
+++ b/experiences.html
@@ -80,7 +80,7 @@
                             </div>
                         </div>
                         <div>
-                            <div class="work">
+                            <div class="work" id="jobs">
                                 <p class="subTitleExp">Work Experience</p>
                                 <div class="project">
                                     <p class="projectName">Salesperson, technician and lead web developer at IT Care
@@ -97,7 +97,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="education">
+                            <div class="education" id="education">
                                 <p class="subTitleExp">Education</p>
                                 <div class="project">
                                     <p class="projectName">Networking and computer science student at Teknikum </p>
