--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p class="subTitle">Hi there! You've reached the coolest website on the internet (well maybe not,
                         but I think it's pretty nice)!</p>
                     <p class="subTitle">This website displays my contract information, my experiences, my projects, you
-                        name it! If it's a question about me, it's here!.</p>
+                        name it! If it's a question about me, it's here!</p>
                 </div>
             </div>
         </div>
