--- a/index.html
+++ b/index.html
@@ -67,13 +67,28 @@
             <div class="constructionBox">
                 <div>
                     <h1>Home</h1>
-                    <p class="subTitle">Hi there! You've reached the coolest website on the internet (well maybe not,
-                        but I think it's pretty nice)!</p>
-                    <p class="subTitle">This website displays my contract information, my experiences, my projects, you
-                        name it! If it's a question about me, it's here!</p>
+                    <div class="centerer">
+                        <div class="centererItems">
+                            <p>Hi there! welcome to my website! I use this website mainly to show requirers my skills and contact information.<br>I hope you'll enjoy your stay here. I'd give you some cookies but I respect your privacy, so maybe another time?</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="work" id="jobs">
+                            <p class="subTitleExp">About me</p>
+                            <div class="project">
+                                <p class="projectName">Adnan Bukvic, also known as @actuallyaridan</p>
+                                <p class="projectDesc">I'm a creative guy that loves making new solutions to old things.<br> I love learning new things and I've liked computers, phones and networking ever since I was a child.<br> I'm always up-to-date about their software and hardware. I even like modifying electronics to do new things, like old cables<br> and accessories like iPods. I know a bunch of languages, so you can really call me Mr Worldwide (but I'd prefer Adnan).</p>
+                                <div class="projectStuff">
+                                    <p class="projectStatus"><img draggable="false" class="emoji" alt=""
+                                        src="src/images/emojis/clock.svg"><br>19 years old</p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/globe.svg"><br>native/bilingual: Swedish, English <br>professional proficiency: Bosnian, Croatian, Serbian</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
     </main>
     <footer>
