--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                     <p class="projectStatus"><img draggable="false" class="emoji" alt=""
                                         src="src/images/emojis/clock.svg"><br>19 years old</p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="src/images/emojis/globe.svg"><br>fluent: Swedish, English <br>can communicate: Bosnian, Croatian, Serbian</p>
+                                            src="src/images/emojis/globe.svg"><br>fluent:<br> Swedish, English <br>communicate:<br> Bosnian, Croatian, Serbian</p>
                                 </div>
                             </div>
                         </div>
