Fixed dumb footer thingy

--- a/contact.html
+++ b/contact.html
@@ -122,6 +122,7 @@
                     </div>
                 </div>
             </div>
+        </div>
     </main>
     <footer>
         <div class="footer">
