--- a/experiences.html
+++ b/experiences.html
@@ -76,7 +76,8 @@
                         <div class="centerer">
                             <div class="centererItems">
                                 <a href="cv.html" class="cvButton">Request CV/resume</a>
-                                <a class="socialMedia linkedin" href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/">LinkedIn</a>
+                                <a class="socialMedia linkedin"
+                                    href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/">LinkedIn</a>
                             </div>
                         </div>
                         <div>
@@ -85,15 +86,20 @@
                                 <div class="project">
                                     <p class="projectName">Salesperson, technician and lead web developer at IT Care
                                         Repairstore</p>
-                                    <p class="projectDesc">This was my first job. I learned a lot during it and I can honestly say it thought me a lot of life lessons that I needed to learn. <br>I learned how to communicate and work as a team, how to professionally repair technology and how to be a good salesperson.<br> It was a real thrill working there!</p>
+                                    <p class="projectDesc">This was my first job. I learned a lot during it and I can
+                                        honestly say it thought me a lot of life lessons that I needed to learn. <br>I
+                                        learned how to communicate and work as a team, how to professionally repair
+                                        technology and how to be a good salesperson.<br> It was a real thrill working
+                                        there!</p>
                                     <div class="projectStuff">
                                         <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
-                                            src="src/images/emojis/clock.svg"><br>Nov 2022 - Oct 2023</p>
+                                                src="src/images/emojis/clock.svg"><br>Nov 2022 - Oct 2023</p>
                                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
                                                 src="src/images/emojis/link.svg"><br> <a
                                                 href="https://itcarestore.se">itcarestore.se</a></p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"><br>Web Development <br>Customer Service <br>Tech Repairs</p>
+                                                src="src/images/emojis/teacher.svg"><br>Web Development <br>Customer
+                                            Service <br>Tech Repairs</p>
                                     </div>
                                 </div>
                             </div>
@@ -101,21 +107,25 @@
                                 <p class="subTitleExp">Education</p>
                                 <div class="project">
                                     <p class="projectName">Networking and computer science student at Teknikum </p>
-                                    <p class="projectDesc">During my time at Teknikum, I got to learn the basics of networking in regard to routing and switching. <br>I also got to learn how to build computers, use virtual machines, manage servers that run on Windows Server along with a <br>basic course in cybersecurity, electronics and web development!</p>
+                                    <p class="projectDesc">During my time at Teknikum, I got to learn the basics of
+                                        networking in regard to routing and switching. <br>I also got to learn how to
+                                        build computers, use virtual machines, manage servers that run on Windows Server
+                                        along with a <br>basic course in cybersecurity, electronics and web development!
+                                    </p>
                                     <div class="projectStuff">
                                         <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
-                                            src="src/images/emojis/clock.svg"><br>Aug 2020 - Jun 2023</p>
+                                                src="src/images/emojis/clock.svg"><br>Aug 2020 - Jun 2023</p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                                src="src/images/emojis/teacher.svg"><br>Networking <br>Computers <br>Web Development <br>Electronics</p>
+                                                src="src/images/emojis/teacher.svg"><br>Networking <br>Computers <br>Web
+                                            Development <br>Electronics</p>
                                     </div>
                                 </div>
                             </div>
-
-
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
     </main>
     <footer>
         <div class="footer">
