testing social media cards

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <meta name="description" content="A website made by actuallyaridan (Adnan Bukvic)">
     <meta name="keywords" content="website, adnan bukvic, actuallyaridan">
     <meta name="author" content="Adnan Bukvic">
+    <meta name="twitter:card" content="summary_with_large_image">
+<meta name="twitter:site" content="test1">
+<meta name="twitter:title" content="test2">
+<meta name="twitter:image" content="">
+<meta name="twitter:description" content="test3">
+<meta property="og:title" content="testa1">
+<meta property="og:description" content="testa2">
+<meta property="og:image" content="">
+<meta property="og:url" content="https://tornow1500.cc">
     <link href="src/styles/styles.css" rel="stylesheet">
     <script src="src/scripts/dropDownMenu.js"></script>
     <script src="src/scripts/mobileMenu.js"></script>
