--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <meta name="description" content="A website made by actuallyaridan (Adnan Bukvic)">
     <meta name="keywords" content="website, adnan bukvic, actuallyaridan">
     <meta name="author" content="Adnan Bukvic">
-    <meta name="twitter:card" content="summary_with_large_image">
-<meta name="twitter:site" content="test1">
-<meta name="twitter:title" content="test2">
-<meta name="twitter:image" content="">
-<meta name="twitter:description" content="test3">
-<meta property="og:title" content="testa1">
-<meta property="og:description" content="testa2">
-<meta property="og:image" content="">
-<meta property="og:url" content="https://tornow1500.cc">
+    <meta name="twitter:card" content="aridan / adnan bukvic's amazing website">
+    <meta name="twitter:site" content="actuallyaridan">
+    <meta name="twitter:title" content="Home">
+    <meta name="twitter:image" content="">
+    <meta name="twitter:description" content="aridan / adnan bukvic's amazing website">
+    <meta property="og:title" content="Home">
+    <meta property="og:description" content="aridan / adnan bukvic's amazing website">
+    <meta property="og:image" content="">
+    <meta property="og:url" content="https://aridan.net">
     <link href="src/styles/styles.css" rel="stylesheet">
     <script src="src/scripts/dropDownMenu.js"></script>
     <script src="src/scripts/mobileMenu.js"></script>
@@ -78,7 +78,9 @@
                     <h1>Home</h1>
                     <div class="centerer">
                         <div class="centererItems">
-                            <p>Hi there! welcome to my website! I use this website mainly to show requirers my skills and contact information.<br>I hope you'll enjoy your stay here. I'd give you some cookies but I respect your privacy, so maybe another time?</p>
+                            <p>Hi there! welcome to my website! I use this website mainly to show requirers my skills
+                                and contact information.<br>I hope you'll enjoy your stay here. I'd give you some
+                                cookies but I respect your privacy, so maybe another time?</p>
                         </div>
                     </div>
                     <div>
@@ -86,12 +88,18 @@
                             <p class="subTitleExp">About me</p>
                             <div class="project">
                                 <p class="projectName">Adnan Bukvic, also known as @actuallyaridan</p>
-                                <p class="projectDesc">I'm a creative guy that loves making new solutions to old things.<br> I love learning new things and I've liked computers, phones and networking ever since I was a child.<br> I'm always up-to-date about their software and hardware. I even like modifying electronics to do new things, like old cables<br> and accessories like iPods. I know a bunch of languages, so you can really call me Mr Worldwide (but I'd prefer Adnan).</p>
+                                <p class="projectDesc">I'm a creative guy that loves making new solutions to old
+                                    things.<br> I love learning new things and I've liked computers, phones and
+                                    networking ever since I was a child.<br> I'm always up-to-date about their software
+                                    and hardware. I even like modifying electronics to do new things, like old
+                                    cables<br> and accessories like iPods. I know a bunch of languages, so you can
+                                    really call me Mr Worldwide (but I'd prefer Adnan).</p>
                                 <div class="projectStuff">
                                     <p class="projectStatus"><img draggable="false" class="emoji" alt=""
-                                        src="src/images/emojis/clock.svg"><br>19 years old</p>
+                                            src="src/images/emojis/clock.svg"><br>19 years old</p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
-                                            src="src/images/emojis/globe.svg"><br>fluent:<br> Swedish, English <br>speaks:<br> Bosnian, Croatian, Serbian</p>
+                                            src="src/images/emojis/globe.svg"><br>fluent:<br> Swedish, English
+                                        <br>speaks:<br> Bosnian, Croatian, Serbian</p>
                                 </div>
                             </div>
                         </div>
