--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#710a97">
     <title>Home — actuallyaridan</title>
-    <meta name="description" content="A website made by actuallyaridan (Adnan Bukvic)">
+    <meta name="description" content="an amazing website made by actuallyaridan (adnan bukvic)">
     <meta name="keywords" content="website, adnan bukvic, actuallyaridan">
     <meta name="author" content="Adnan Bukvic">
     <meta name="twitter:card" content="aridan / adnan bukvic's amazing website">
