Set projects to completed

--- a/projects.html
+++ b/projects.html
@@ -97,7 +97,7 @@
                                     button along with a transparent faceplate. <br>I've also installed a larger battery
                                     and replaced its hard drive with a microSD card.</p>
                                 <div>
-                                    <p class="projectStatus WIP">Work in progress</p>
+                                    <p class="projectStatus completed">Completed</p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                             src="src/images/emojis/teacher.svg"> Electronics modification</p>
                                 </div>
@@ -108,7 +108,7 @@
                                     also upgraded it by replacing its hard drive with a Compact Flash card and I
                                     installed a new battery too.</p>
                                 <div>
-                                    <p class="projectStatus WIP">Work in progress</p>
+                                    <p class="projectStatus completed">Completed</p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                             src="src/images/emojis/teacher.svg"> Electronics modification</p>
                                 </div>
