Links to external webpages now open in a new tab

--- a/contact.html
+++ b/contact.html
@@ -107,14 +107,14 @@
                                     href="https://www.instagram.com/actuallyaridan/">Instagram</a>
                             </div>
                             <div>
-                                <a class="socialMedia aMusic" href="https://music.apple.com/profile/actuallyaridan">Apple Music</a>
+                                <a class="socialMedia aMusic" href="https://music.apple.com/profile/actuallyaridan" target="_blank">Apple Music</a>
                             </div>
                             <div>
-                                <a class="socialMedia twitter" href="https://x.com/actuallyaridan">X (formerly
+                                <a class="socialMedia twitter" href="https://x.com/actuallyaridan" target="_blank">X (formerly
                                     Twitter)</a>
                             </div>
                             <div>
-                                <a class="socialMedia threads" href="https://www.threads.net/@actuallyaridan">Threads
+                                <a class="socialMedia threads" href="https://www.threads.net/@actuallyaridan" target="_blank">Threads
                                     (an
                                     Instagram app)</a>
                             </div>
