--- a/experiences.html
+++ b/experiences.html
@@ -77,7 +77,7 @@
                             <div class="centererItems">
                                 <a href="cv.html" class="cvButton">Request CV/resume</a>
                                 <a class="socialMedia linkedin"
-                                    href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/">LinkedIn</a>
+                                    href="https://www.linkedin.com/in/adnan-bukvic-b220b1277/" target="_blank">LinkedIn</a>
                             </div>
                         </div>
                         <div>
