--- a/projects.html
+++ b/projects.html
@@ -81,10 +81,10 @@
                                     <p class="projectStatus WIP">Work in progress</p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
                                             src="src/images/emojis/link.svg"> <a
-                                            href="https://aridan.net">aridan.net</a></p>
+                                            href="https://aridan.net" target="_blank">aridan.net</a></p>
                                     <p class="projectLink"><img draggable="false" class="emoji" alt=""
                                             src="src/images/emojis/link.svg"> <a
-                                            href="https://github.com/actuallyaridan/aridan.net">GitHub</a></p>
+                                            href="https://github.com/actuallyaridan/aridan.net" target="_blank">GitHub</a></p>
                                     <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                             src="src/images/emojis/teacher.svg"> HTML, CSS, JavaScript</p>
                                     <p class="projectLegal"><img draggable="false" class="emoji" alt=""
