Fixed links in the experiences page

--- a/experiences.html
+++ b/experiences.html
@@ -96,7 +96,7 @@
                                                 src="src/images/emojis/clock.svg"><br>Nov 2022 - Oct 2023</p>
                                         <p class="projectLink"><img draggable="false" class="emoji" alt=""
                                                 src="src/images/emojis/link.svg"><br> <a
-                                                href="https://itcarestore.se">itcarestore.se</a></p>
+                                                href="https://itcarestore.se" target="_blank">itcarestore.se</a></p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                                 src="src/images/emojis/teacher.svg"><br>Web Development <br>Customer
                                             Service <br>Tech Repairs</p>
@@ -115,6 +115,9 @@
                                     <div class="projectStuff">
                                         <p class="projectStatus completed"><img draggable="false" class="emoji" alt=""
                                                 src="src/images/emojis/clock.svg"><br>Aug 2020 - Jun 2023</p>
+                                                <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                                    src="src/images/emojis/link.svg"><br> <a
+                                                    href="https://teknikum.se" target="_blank">teknikum.se</a></p>
                                         <p class="projectLearned"><img draggable="false" class="emoji" alt=""
                                                 src="src/images/emojis/teacher.svg"><br>Networking <br>Computers <br>Web
                                             Development <br>Electronics</p>
