--- a/projects.html
+++ b/projects.html
@@ -92,6 +92,21 @@
                                 </div>
                             </div>
                             <div class="project">
+                                <p class="projectName">Swedish translation of OldTwitter</p>
+                                <p class="projectDesc">OldTwitter is a Firefox and Chrome extension to make X (formerly Twitter) look and feel like Twitter from 2015/2018. <br>I actively translate the extension to Swedish, and I believe I'm doing a pretty decent job! You should check it out!</p>
+                                <div>
+                                    <p class="projectStatus WIP">Work in progress</p>
+                                    <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/link.svg"> <a
+                                            href="https://github.com/dimdenGD/OldTwitter/tree/master/_locales/sv" target="_blank">GitHub</a></p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/teacher.svg">.json, translation and i8n technology</p>
+                                    <p class="projectLegal"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/judge.svg"> Owned by <a
+                                            href="https://dimden.dev" target="_blank">dimden</a></p>
+                                </div>
+                            </div>
+                            <div class="project">
                                 <p class="projectName">iPod Video 5th Gen</p>
                                 <p class="projectDesc">I have modified this iPod with a transparent click wheel and
                                     button along with a transparent faceplate. <br>I've also installed a larger battery
