--- a/sv/projects.html
+++ b/sv/projects.html
@@ -3,15 +3,18 @@
 
 <head>
     <meta charset="utf-8">
-    <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
-    <script src="../src/scripts/twimojiFix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#710a97">
     <title>Projekt — actuallyaridan</title>
+    <meta name="description" content="All of actuallyaridan (Adnan Bukvic)'s projects on one page">
+    <meta name="keywords" content="projects, adnan bukvic, actuallyaridan">
+    <meta name="author" content="Adnan Bukvic">
     <link href="../src/styles/styles.css" rel="stylesheet">
     <script src="../src/scripts/dropDownMenu.js"></script>
     <script src="../src/scripts/mobileMenu.js"></script>
-    <link rel="apple-touch-icon" sizes="180x180" href="../src/favicons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="../src/favicons/apple-touch-icon.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="32x32" href="../src/favicons/favicon-32x32.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="16x16" href="../src/favicons/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../src/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../src/favicons/favicon-16x16.png">
     <link rel="manifest" href="../src/favicons/site.webmanifest">
@@ -22,27 +25,39 @@
         <nav>
             <div class="langWrapper">
                 <div class="dropdown">
-                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID">🌐 Språk (Language)</button>
+                    <button onclick="toggleLangDrop()" class="dropButton lang" id="dropButtonID"><img draggable="false"
+                            class="emoji" alt="" src="../src/images/emojis/globe.svg"> Språk (Language)</button>
                     <div id="langDrop" class="dropdownContent">
-                        <a href="projects.html">🇸🇪 Svenska</a>
-                        <a href="../projects.html">🇺🇸/🇬🇧 English (Engelska)</a>
+                        <a href="../projects.html"><img draggable="false" class="emoji" alt=""
+                                src="../src/images/emojis/usa.svg">/<img draggable="false" class="emoji" alt=""
+                                src="../src/images/emojis/uk.svg"> English (Engelska)</a>
+                        <a href="projects.html"><img draggable="false" class="emoji" alt=""
+                                src="../src/images/emojis/sweden.svg"> Svenska</a>
                     </div>
                 </div>
             </div>
             <div class="navWrapper">
-                <a class="navButton" href="index.html">🏠 Hem</a>
-                <a class="navButton" href="socialmedia.html">💬 Sociala medier</a>
-                <a class="navButton" href="experiences.html">🧠 Erfarenhet</a>
-                <a class="navButton activeChoice" href="projects.html">🛠️ Projekt</a>
+                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/house.svg"> Hem</a>
+                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/brain.svg"> Erfarenhet</a>
+                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/tools.svg"> Projekt</a>
+                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/speak.svg"> Kontakt</a>
             </div>
             <div class="navWrapperMobile">
-                <button onclick="toggleMenu()" class="navButton" >＝ Meny</button>
+                <button onclick="toggleMenu()" class="navButton">＝ Menu</button>
             </div>
             <div class="mobileMenu" id="mobileMenuID">
-                <a class="navButton" href="index.html">🏠 Hem</a>
-                <a class="navButton" href="socialmedia.html">💬 Sociala medier</a>
-                <a class="navButton" href="experiences.html">🧠 Erfarenhet</a>
-                <a class="navButton activeChoice" href="projects.html">🛠️ Projekt</a>
+                <a class="navButton" href="index.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/house.svg"> Hem</a>
+                <a class="navButton" href="experiences.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/brain.svg"> Erfarenhet</a>
+                <a class="navButton activeChoice" href="projects.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/tools.svg"> Projekt</a>
+                <a class="navButton" href="contact.html"><img draggable="false" class="emoji" alt=""
+                        src="../src/images/emojis/speak.svg"> Kontakt</a>
             </div>
         </nav>
     </header>
@@ -50,14 +65,108 @@
         <div class="containerCenterer">
             <div class="constructionBox">
                 <div>
-                    <h1>Projekt</h1>
-                    <p class="checkBack">Kom tillbaka senare</p>
-                    <p class="bottomText">Den här webbsidan utvecklas av @actuallyaridan på X (tidigare Twitter).<br>Du
-                        kan kopiera denna sidas källkod.</p>
+                    <h1>Projects</h1>
+                    <div>
+                        <div>
+                            <p class="subTitle">Jag har massor av olika projekt som jag håller på med ibland. <br>Vissa
+                                av dem är tekniska och andra är mjukvaruprojekt eller webbsidor och liknande. <br>Ta och
+                                kika på dem! Jag slår vad att du kommer gilla i alla fall en av dem. I vilket fall så
+                                hade jag kul nr jag skapade dem!
+                                <img draggable="false" class="emoji" alt="" src="../src/images/emojis/happy.svg">
+                            </p>
+                            <div class="project">
+                                <p class="projectName">Den där webbsidan (aridan.net)</p>
+                                <p class="projectDesc">Denna webbsidan innehåller alla mina länkar till mina konton på sociala medier och liknande och min arbetslivserfarenhet. <br>Jag lär mig ständigt nya saker genom denna webbsida, men mestadels hur man kan göra webbsidor se bra ut!</p>
+                                <div>
+                                    <p class="projectStatus WIP">Pågår</p>
+                                    <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                            src="../src/images/emojis/link.svg"> <a href="https://aridan.net"
+                                            target="_blank">aridan.net</a></p>
+                                    <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                            src="../src/images/emojis/link.svg"> <a
+                                            href="https://github.com/actuallyaridan/aridan.net"
+                                            target="_blank">GitHub</a></p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="../src/images/emojis/teacher.svg"> HTML, CSS, JavaScript</p>
+                                    <p class="projectLegal"><img draggable="false" class="emoji" alt=""
+                                            src="../src/images/emojis/judge.svg"> MIT licensen</p>
+                                </div>
+                            </div>
+                            <div class="project">
+                                <p class="projectName">Den svenska översättningen av OldTwitter</p>
+                                <p class="projectDesc">OldTwitter is a Firefox and Chrome extension to make X (formerly
+                                    Twitter) look and feel like Twitter from 2015/2018. <br>I actively translate the
+                                    extension to Swedish, and I believe I'm doing a pretty decent job! You should check
+                                    it out!</p>
+                                <div>
+                                    <p class="projectStatus WIP">Work in progress</p>
+                                    <p class="projectLink"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/link.svg"> <a
+                                            href="https://github.com/dimdenGD/OldTwitter/tree/master/_locales/sv"
+                                            target="_blank">GitHub</a></p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/teacher.svg">.json, translation and i8n technology
+                                    </p>
+                                    <p class="projectLegal"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/judge.svg"> Owned by <a href="https://dimden.dev"
+                                            target="_blank">dimden</a></p>
+                                </div>
+                            </div>
+                            <div class="project">
+                                <p class="projectName">iPod Video 5th Gen</p>
+                                <p class="projectDesc">I have modified this iPod with a transparent click wheel and
+                                    button along with a transparent faceplate. <br>I've also installed a larger battery
+                                    and replaced its hard drive with a microSD card.</p>
+                                <div>
+                                    <p class="projectStatus completed">Completed</p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/teacher.svg"> Electronics modification</p>
+                                </div>
+                            </div>
+                            <div class="project">
+                                <p class="projectName">iPod Click Wheel 4th Gen</p>
+                                <p class="projectDesc">I have repaired this iPod by replacing its click wheel. <br>I've
+                                    also upgraded it by replacing its hard drive with a Compact Flash card and I
+                                    installed a new battery too.</p>
+                                <div>
+                                    <p class="projectStatus completed">Completed</p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/teacher.svg"> Electronics modification</p>
+                                </div>
+                            </div>
+                            <div class="project">
+                                <p class="projectName">iPod Mini 2nd Gen </p>
+                                <p class="projectDesc">I've also upgraded this iPod by replacing its hard drive with a
+                                    Compact Flash card and I installed a new battery too.</p>
+                                <div>
+                                    <p class="projectStatus completed">Completed</p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/teacher.svg"> Electronics modification</p>
+                                </div>
+                            </div>
+                            <div class="project">
+                                <p class="projectName">Hackintoshing a PC</p>
+                                <p class="projectDesc">Hackintoshing is the act of installing macOS on non-Apple
+                                    hardware. <br>I did this as a hobby project and I learned a lot about Apple
+                                    software. It was a fun project and it still works to this day!</p>
+                                <div>
+                                    <p class="projectStatus completed">Completed</p>
+                                    <p class="projectLearned"><img draggable="false" class="emoji" alt=""
+                                            src="src/images/emojis/teacher.svg"> Software</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
+    <footer>
+        <div class="footer">
+            <p>© Copyright 2024 by Adnan Bukvic unless stated otherwise. This project uses the MIT license.</p>
+            <p>Twemoji by Twitter Inc/X Corp is licensed under CC-BY 4.0.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
