added save button

--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -19,6 +19,9 @@
 </head>
 
 <body>
+    <header>
+        <button class="saveButton">Save</button>
+    </header>
     <main>
         <div class="settingGroup">
             <p>Content you see</p>
