Improved Save button

--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -19,9 +19,6 @@
 </head>
 
 <body>
-    <header>
-        <button class="saveButton">Save</button>
-    </header>
     <main>
         <div class="settingGroup">
             <p>Content you see</p>
@@ -54,7 +51,7 @@
                             <button>Purple (default)</button>
                             <button class="red">Red</button>
                             <button class="green">Green</button>
-                            <button>Blue</button>
+                            <button class="blue">Blue</button>
                             <button>Custom...</button>
                         </div>
                     </li>
@@ -89,5 +86,6 @@
                 </ul>
             </div>
         </div>
+        <button class="saveButton">Save</button>
     </main>
 </body>
