improved save button

--- a/src/settings/settings.html
+++ b/src/settings/settings.html
@@ -86,6 +86,8 @@
                 </ul>
             </div>
         </div>
-        <button class="saveButton">Save</button>
     </main>
+    <div class="bottomButton">
+        <button class="saveButton">Save</button>
+    </div>
 </body>
